--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "16.0.0",
     "react-native": "0.51.0",
+    "react-native-navigation": "^1.1.334",
     "react-native-tab-navigator": "^0.3.4"
   },
   "devDependencies": {
